2012-05-04  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/misc.c (grub_strcmp): Use unsigned comparison as
	per common usage and preffered in several parts of code.
	(grub_memcmp): Likewise.
	(grub_strncmp): Likewise.
	* include/grub/misc.h (grub_strcasecmp): Likewise.
	(grub_strncasecmp): Likewise.
	* Makefile.util.def (cmp_test): New test.
	(grub_script_strcmp): Likewise.
	* tests/cmp_unit_test.c: New file.
	* tests/grub_script_strcmp.in: Likewise.
	* grub-core/fs/hfsplus.c (grub_hfsplus_cmp_catkey): Add a comment.

2012-05-04  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/pci.h: Move enums into no-asm part.

2012-05-04  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/bfs.c (bfs_strcmp) [MODE_AFS]: Use signed comparison.

2012-05-04  Samuel Thibault <samuel.thibault@ens-lyon.org>

	* util/getroot.c (find_hurd_root_device): Try to make error message
	and comments to translators clearer.

2012-05-04  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/menuentry.c: Fix typo in TRANSLATORS comments.

2012-05-04  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/fs.c (grub_fs_probe) [GRUB_UTIL]: Add workaround for
	btrfs.

2012-05-04  Vladimir Serbinenko  <phcoder@gmail.com>

	* docs/grub.cfg: Update.

2012-05-04  Vladimir Serbinenko  <phcoder@gmail.com>

	* docs/grub.texi (PXE): Remove not present variables.

2012-05-04  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/net/net.c (defserver_set_env): New function.
	(defserver_get_env): Likewise.
	(GRUB_MOD_INIT): Register net_default_server and pxe_default_server.

2012-05-03  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/emu/hostdisk.c (read_device_map): Skip invalid Fedora
	entries.

2012-05-03  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/menuentry.c: Add TRANSLATORS comments.
	* grub-core/kern/emu/hostdisk.c: Likewise.

2012-05-03  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	Handle hurd userspace partitions.
